# hector_navigation

./: .gitignore  README.md  stack.xml
hector_costmap/: CMakeLists.txt  CMakeLists.txt~  mainpage.dox  manifest.xml  package.xml  package.xml~
hector_costmap/cfg/: CostMapCalculation.cfg  CostMapCalculation.cfg~
hector_costmap/include/hector_costmap/: hector_costmap.h
hector_costmap/launch/: costmap.launch
hector_costmap/src/: .hector_costmap.cpp.kate-swp  CMakeLists.txt  hector_costmap.cpp  hector_costmap.cpp~  hector_costmap.h  hector_costmap.h~  hector_costmap_node.cpp  hector_costmap_node.cpp~
hector_driving_aid_markers/: CMakeLists.txt  CMakeLists.txt~  mainpage.dox  manifest.xml  package.xml
hector_driving_aid_markers/launch/: hector_jasmine.launch  hector_tracker.launch  hector_ugv.launch
hector_driving_aid_markers/src/: driving_aid_marker_node.cpp
hector_elevation_mapping/: CMakeLists.txt  CMakeLists.txt~  mainpage.dox  manifest.xml  nodelet_plugins.xml  package.xml  package.xml~
hector_elevation_mapping/launch/: elevation_mapping.launch  elevation_mapping_node.launch
hector_elevation_mapping/src/: CMakeLists.txt  hector_elevation_mapping.cpp  hector_elevation_mapping.cpp~  hector_elevation_mapping.h  hector_elevation_mapping_node.cpp
hector_elevation_msgs/: CMakeLists.txt  CMakeLists.txt~  mainpage.dox  manifest.xml  package.xml  package.xml~
hector_elevation_msgs/msg/: ElevationGrid.msg  ElevationMapMetaData.msg
hector_elevation_visualization/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
hector_elevation_visualization/cfg/: ElevationVisualization.cfg
hector_elevation_visualization/include/hector_elevation_visualization/: hector_elevation_visualization.h
hector_elevation_visualization/launch/: hector_elevation_visualization.launch
hector_elevation_visualization/src/: CMakeLists.txt  hector_elevation_visualization.cpp  hector_elevation_visualization.h  hector_elevation_visualization_node.cpp
hector_exploration_controller/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
hector_exploration_controller/src/: simple_exploration_controller.cpp
hector_exploration_node/: CMakeLists.txt  CMakeLists.txt~  mainpage.dox  manifest.xml  package.xml  package.xml~
hector_exploration_node/config/: costmap.yaml
hector_exploration_node/launch/: exploration_planner.launch
hector_exploration_node/src/: exploration_node.cpp  exploration_node.cpp~
hector_exploration_planner/: CMakeLists.txt  CMakeLists.txt~  hector_exploration_base_global_planner_plugin.xml  mainpage.dox  manifest.xml  package.xml  package.xml~
hector_exploration_planner/cfg/: ExplorationPlanner.cfg  ExplorationPlanner.cfg~
hector_exploration_planner/include/hector_exploration_planner/: exploration_transform_vis.h  hector_exploration_base_global_planner_plugin.h  hector_exploration_planner.h
hector_exploration_planner/src/: hector_exploration_base_global_planner_plugin.cpp  hector_exploration_base_global_planner_plugin.cpp~  hector_exploration_planner.cpp  hector_exploration_planner.cpp~  hector_exploration_planner.h
hector_gps_calibration/: CMakeLists.txt  package.xml
hector_gps_calibration/cfg/: ahg_lab.yaml  rundeturm_street.yaml
hector_gps_calibration/include/hector_gps_calibration/: angle_local_parameterization.h  hector_gps_calibration.h  normalize_angle.h  rotation_cost_functor.h  transform_delta_cost_functor.h
hector_gps_calibration/launch/: ahg_lab.launch  debug_setup.launch  rundeturm_street.launch
hector_gps_calibration/src/: hector_gps_calibration.cpp  hector_gps_calibration_node.cpp  plot_solution.py
hector_path_follower/: CMakeLists.txt  CMakeLists.txt~  mainpage.dox  manifest.xml  package.xml  package.xml~
hector_path_follower/include/hector_path_follower/: hector_path_follower.h
hector_path_follower/src/: hector_path_follower.cpp  hector_path_follower_node.cpp
hector_timestamp_alignment/: CMakeLists.txt  package.xml
hector_timestamp_alignment/config/: timestamp_alignment.cfg
hector_timestamp_alignment/src/hector_timestamp_alignment/: timestamp_alignment.py
